# Networked_AI_System_Course

./: .gitignore  README.md  pyproject.toml
networked-ai-system-course/deploy/: .env  docker-compose.1.yml  docker-compose.2.yml  docker-compose.4.yml  docker-compose.yml
networked-ai-system-course/figs/: convert.sh
networked-ai-system-course/notebooks/: etl.ipynb  vizualization.ipynb
networked-ai-system-course/results/DIRECT_GENETIC_ALGORITHM_MATING_AVERAGE_AGGREGATION_2_NODES/: iter_df.pkl  server_hp_config.pkl  training_df.pkl
networked-ai-system-course/results/DIRECT_GENETIC_ALGORITHM_MATING_AVERAGE_AGGREGATION_4_NODES/: iter_df.pkl  server_hp_config.pkl  training_df.pkl
networked-ai-system-course/results/DIRECT_MEANS_AVERAGE_AGGREGATION_2_NODES/: iter_df.pkl  server_hp_config.pkl  training_df.pkl
networked-ai-system-course/results/DIRECT_MEANS_AVERAGE_AGGREGATION_4_NODES/: iter_df.pkl  server_hp_config.pkl  training_df.pkl
networked-ai-system-course/results/DIRECT_SCORE_WEIGHTED_MEANS_AVERAGE_AGGREGATION_2_NODES/: iter_df.pkl  server_hp_config.pkl  training_df.pkl
networked-ai-system-course/results/DIRECT_SCORE_WEIGHTED_MEANS_AVERAGE_AGGREGATION_4_NODES/: iter_df.pkl  server_hp_config.pkl  training_df.pkl
networked-ai-system-course/results/GRADUAL_GENETIC_ALGORITHM_MATING_AVERAGE_AGGREGATION_2_NODES/: iter_df.pkl  server_hp_config.pkl  training_df.pkl
networked-ai-system-course/results/GRADUAL_GENETIC_ALGORITHM_MATING_AVERAGE_AGGREGATION_4_NODES/: iter_df.pkl  server_hp_config.pkl  training_df.pkl
networked-ai-system-course/src/node/: Dockerfile  (+6 more)
(+63 files in other folders)
